[package]
name = "fdpi"
version = "0.1.1"
edition = "2021"
description = "fuck dpi http proxy"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1" }
hickory-resolver = { version = "0.25.0-alpha.2", features = ["dns-over-https-rustls"] }
hickory-proto = { version = "0.25.0-alpha.2" }
webpki-roots = { version = "*" }
rustls = "=0.23.12"
log = { version = "*", features = ["max_level_trace", "release_max_level_trace"] }
clap = { version = "4.5.16", features = ["derive", "cargo"] }
pretty_env_logger = "0.5.0"


